# genart

./: Cargo.toml
src/: boids.rs  colour.rs  field.rs  kayconfig.rs  lib.rs  region.rs
