[package]
name = "genart"
version = "0.2.0"
edition = "2021"
rust-version = "1.74.1"

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow = "1.0.82"
cairo-rs = { version = "0.20.0", features = ["png"] }
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.5"
indicatif = "0.17.8"
rand = "0.9.0"
